<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cracter_img"
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/cracter2" />

    <TextView
        android:id="@+id/cracter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cracter_img"
        android:layout_marginTop="30dp"
        android:text="@string/phone_verification"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cracter_title"
        android:layout_marginTop="30dp"
        android:text="@string/we_need_to_register_your_phone_number_before_getting_started"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="normal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/phone_picker"
        android:background="@drawable/corner_editext"
        android:layout_below="@+id/info_detail"
        android:orientation="horizontal" >

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showNameCode="false"
            app:ccp_defaultNameCode="PK"
            android:layout_marginTop="8dp"
            android:id="@+id/code_picker" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="10"
            android:inputType="phone"
            android:padding="15dp" />

    </LinearLayout>


    <Button
        android:id="@+id/phone_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_picker"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_btn"
        android:padding="10dp"
        android:text="@string/send_the_code"
        android:textAllCaps="false" />

</RelativeLayout>