<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="100dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cracter_img"
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/cracter2" />

    <TextView
        android:id="@+id/cracter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cracter_img"
        android:layout_marginTop="30dp"
        android:text="@string/phone_verification"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cracter_title"
        android:layout_marginTop="15dp"
        android:text="@string/we_need_to_register_your_phone_number_before_getting_started"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otpEdittext"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/info_detail">
        <EditText
            android:id="@+id/edittextOne"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />
        <EditText
            android:id="@+id/edittextTwo"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />
        <EditText
            android:id="@+id/edittextThree"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />
        <EditText
            android:id="@+id/edittextFour"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />
        <EditText
            android:id="@+id/edittextFive"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />
        <EditText
            android:id="@+id/edittextSix"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/gareen"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:padding="15dp"  />

    </LinearLayout>

    <Button
        android:id="@+id/phone_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otpEdittext"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_btn"
        android:padding="10dp"
        android:text="@string/verify_phone_number"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/editNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_submit_btn"
        android:layout_marginTop="15dp"
        android:text="@string/edit_phone_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/sendagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_submit_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/editNumber"
        android:text="@string/send_again"
        android:textAlignment="viewEnd"
        android:textColor="@color/gareen"
        android:textSize="16sp" />

</RelativeLayout>
</ScrollView>